# roehub.com

./: .dockerignore  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  repo_tree.md
.github/workflows/: ci.yml  deploy.yml
.opencode/: openai-codex-auth-config.json
alembic/: env.py
alembic/versions/: 20260215_0001_strategy_storage_v1.py  20260216_0002_strategy_run_metadata_v1.py  20260222_0003_backtest_jobs_v1.py
apps/api/: __init__.py
apps/cli/: test_backfill_1m_parsing.py
apps/migrations/: __init__.py  bootstrap.py  bootstrap_main.py  main.py
apps/web/: __init__.py
configs/dev/: backtest.yaml  indicators.yaml  market_data.yaml  strategy.yaml  strategy_live_runner.yaml  whitelist.csv
configs/prod/: backtest.yaml  indicators.yaml  market_data.yaml  strategy.yaml  strategy_live_runner.yaml  whitelist.csv
configs/test/: backtest.yaml  indicators.yaml  strategy.yaml  strategy_live_runner.yaml
data_load/promts/: codex-bkt-epic-01-backtest-context-skeleton-v1-implementation.md  codex-bkt-epic-02-candle-timeline-rollup-warmup-v1-implementation.md  codex-bkt-epic-03-signals-from-indicators-v1-implementation.md  codex-bkt-epic-04-grid-builder-staged-runner-guards-v1-implementation.md  codex-bkt-epic-05-execution-engine-close-fill-v1-implementation.md  codex-bkt-epic-06-reporting-metrics-table-v1-implementation.md  codex-bkt-epic-07-api-post-backtests-v1-implementation.md  codex-bkt-epic-08-tests-determinism-golden-perf-smoke-v1-implementation.md  codex-bkt-epic-09-backtest-jobs-storage-pg-state-machine-v1-implementation.md  codex-bkt-epic-10-backtest-job-runner-worker-v1-implementation.md  codex-str-epic-05-telegram-notifier-v1-implementation.md  (+1 more)
deploy/: .env.example  docker-compose.yml
docs/: repository_three.md
notebooks/: 01_backtest_regression_smoke.ipynb  02_backtest_perf_memory_smoke.ipynb  03_sync_backtest_pickle_rollup_1h_ma_grid.ipynb  03_sync_backtest_pickle_rollup_1h_ma_grid.py  README.md
(+668 files in other folders)
