[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "roehub"
version = "0.0.0"
description = "roehub.com (open-source repo)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  # Base runtime
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "python-dotenv==1.0.1",
  "orjson==3.10.12",
  "ujson==5.10.0",
  "python-dateutil==2.9.0.post0",
  "pyyaml==6.0.2",
  "numpy==2.0.2",
  "numba==0.60.0",
  # API (FastAPI)
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "jinja2==3.1.4",
  "httpx==0.27.2",
  # Kafka
  "confluent-kafka==2.6.1",
  # PostgreSQL
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.4",
  # Redis
  "redis==5.2.0",
  # ClickHouse
  "clickhouse-connect==0.8.10",
  # Observability (OpenTelemetry)
  "opentelemetry-api==1.28.2",
  "opentelemetry-sdk==1.28.2",
  "opentelemetry-instrumentation==0.49b2",
  "opentelemetry-instrumentation-fastapi==0.49b2",
  "opentelemetry-instrumentation-requests==0.49b2",
  "opentelemetry-exporter-otlp==1.28.2",
  "prometheus-client==0.21.0",
  # Logging / resilience / crypto
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "cryptography==43.0.3",
  "jsonschema==4.23.0",
  "beautifulsoup4>=4.14.3",
  "lxml>=6.0.2",
  "pybit>=5.13.0",
  "binance-historical-data>=0.1.14",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.7.4",
  "mypy==1.13.0",
  "types-python-dateutil==2.9.0.20241003",
  "types-PyYAML==6.0.12.20240917",
  "pyright[nodejs]>=1.1.408",
]
data = [
  "pandas==2.2.3",
  "pyarrow==18.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/trading", "apps"]
